--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@base-ui-components/react": "^1.0.0-alpha.4",
     "@react-router/node": "^7.1.0",
     "@react-router/serve": "^7.1.0",
     "isbot": "^5.1.17",
