--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,10 @@
     "format": "prettier --write '**/*.{js,jsx,ts,tsx,json,css,scss,md}'",
     "lint": "eslint './**/*.{ts,tsx}'",
     "lint:fix": "eslint './**/*.{ts,tsx}' --fix",
-    "typecheck": "react-router typegen && tsc",
+    "typecheck": "react-router typegen && tsc --noEmit",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "prepare": "husky"
+    "pre-commit": "npm run lint:fix && npm run format && npm run typecheck",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@base-ui-components/react": "^1.0.0-alpha.4",
@@ -53,9 +53,7 @@
     "eslint-plugin-react": "^7.37.3",
     "eslint-plugin-react-hooks": "^5.1.0",
     "globals": "^15.14.0",
-    "husky": "^9.1.7",
     "jsdom": "^25.0.1",
-    "lint-staged": "^15.2.11",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
     "storybook": "^8.4.7",
