chore: update routing and add hello-world page
- Disabled '@typescript-eslint/no-namespace' rule in ESLint configuration.
- Updated TypeScript configuration to include new path for React Router types.
- Changed default route from 'pages/home.tsx' to 'pages/hello-world.tsx'.
- Created new 'hello-world.tsx' page with a loader and meta information.
- Removed the old 'home.tsx' page.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "lint:fix": "eslint './**/*.{ts,tsx}' --fix",
     "typecheck": "react-router typegen && tsc --noEmit",
     "storybook": "storybook dev -p 6006",
-    "pre-commit": "npm run lint:fix && npm run format && npm run typecheck",
+    "pre-commit": "npm run typecheck && npm run lint:fix && npm run format",
     "build-storybook": "storybook build"
   },
   "dependencies": {
