--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,17 @@
     "typecheck": "react-router typegen && tsc --noEmit",
     "storybook": "storybook dev -p 6006",
     "pre-commit": "npm run typecheck && npm run lint:fix && npm run format",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "queries": "ts-node ./src/queries.ts",
+    "caching": "ts-node ./src/caching.ts",
+    "realtime": "ts-node ./src/realtime.ts"
   },
   "dependencies": {
+    "@prisma/client": "5.22.0",
+    "@prisma/extension-accelerate": "1.2.1",
+    "@prisma/extension-pulse": "1.2.0",
+    "@types/node": "22.10.2",
+    "dotenv": "16.4.7",
     "@base-ui-components/react": "^1.0.0-alpha.4",
     "@react-router/node": "^7.1.0",
     "@react-router/serve": "^7.1.0",
@@ -56,8 +64,10 @@
     "jsdom": "^25.0.1",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
+    "prisma": "5.22.0",
     "storybook": "^8.4.7",
     "tailwindcss": "^3.4.16",
+    "ts-node": "10.9.2",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.18.2",
     "vite": "^5.4.11",
